--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.1",
+    "uniqid": "^5.4.0",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
